@@ -3,7 +3,12 @@ Revision history for Perl extension App::Info.
 0.44
       - Yet another fix for test failures on Win32, this time for PostgreSQL.
       - Fixed SQLite tests for DBD::SQLite (which is used to collect
-        informationto when the SQLite executable can't be found) work properly.
+        informationto when the SQLite executable can't be found) work
+        properly.
+      - Added workaround for strange bug on Perl 5.005_04 where handlers
+        assigned to an App::Info object after its creation would be
+        prompty forgotten. Reported by Yuval Kogman, who also gave me
+        a login to a server with Perl 5.005_04 to fix the problem.
 
 0.43  2004-12-14T19:45:52
       - Added "search_*_name" parameters and methods for searching for
